# server

./: CMakeLists.txt  README.md
include/: public.hpp
include/server/: chatserver.hpp  chatservice.hpp
include/server/model/: UserModel.hpp  friendmodel.hpp  group.hpp  groupmodel.hpp  groupuser.hpp  offlinemessagemodel.hpp  user.hpp
include/server/mysql/: mysql.hpp
src/client/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  main.cpp
src/server/model/: UserModel.cpp  friendmodel.cpp  groupmodel.cpp  offlinemessagemodel.cpp
src/server/mysql/: mysql.cpp
src/server/redis/: redis.cpp
